# Solver_GTO

./: .gitignore  CMakeLists.txt  PR_description.md  ROADMAP.md  design_doc_exploitability.md
include/: action_abstraction.h  cfr_engine.h  game_state.h  hand_evaluator.h  hand_generator.h  info_set.h  monte_carlo.h  node.h
src/: action_abstraction.cpp  cfr_engine.cpp  game_state.cpp  hand_evaluator.cpp  hand_generator.cpp  info_set.cpp  main.cpp  monte_carlo.cpp
test/: action_abstraction_fix_test.cpp  action_abstraction_test.cpp  cfr_engine_test.cpp  game_state_test.cpp  hand_evaluator_test.cpp  hand_generator_test.cpp
